--- a/public/style.css
+++ b/public/style.css
@@ -310,6 +310,9 @@ body {
   display: none !important;
 }
 
+.liked {
+  color: red;
+}
 @media (max-width: 935px) {
   .sidebar {
     display: none;
